Add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ email: we@freeair.io
 # feedburner:
 #   id: feedburnerid
 
-# google_analytics:
-#   account: UA-XXXXX-X
+google_analytics:
+  account: UA-34835090-1
 
 # github:
 #   username: ghusername
