--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ markdown: rdiscount
 
 domain: freeair.io
 title: FreeAir
-author: The FreeAir team
+author: FreeAir team (Ikenna Okpala and Seyi Ogunyemi)
 email: we@freeair.io
 
 # configuration for ehancements, uncomment to enable
@@ -21,7 +21,7 @@ google_analytics:
   account: UA-34835090-1
 
 # github:
-#   username: ghusername
+#   username: freeair
 
 # disqus:
 #   id: disqusid
